[package]
name = "rollup-node-sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true

# scroll reth
reth-scroll-engine-primitives.workspace = true
reth-scroll-primitives.workspace = true

# scroll-alloy
scroll-alloy-consensus.workspace = true
scroll-alloy-hardforks.workspace = true
scroll-alloy-provider.workspace = true
scroll-alloy-rpc-types-engine.workspace = true

# rollup-node
scroll-db = { workspace = true }
scroll-engine.workspace = true
rollup-node-providers.workspace = true
rollup-node-primitives.workspace = true

# misc
futures.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
eyre.workspace = true

[dev-dependencies]
# alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true

rollup-node-manager.workspace = true
rollup-node-signer.workspace = true

# scroll-alloy
scroll-alloy-consensus.workspace = true

# reth
reth-e2e-test-utils.workspace = true
reth-node-core.workspace = true
reth-tracing.workspace = true

# reth-scroll
reth-scroll-chainspec.workspace = true
reth-scroll-node = { workspace = true, features = ["test-utils"] }

# rollup-node
rollup-node = { workspace = true, features = ["test-utils"] }
rollup-node-chain-orchestrator.workspace = true
rollup-node-primitives.workspace = true
rollup-node-providers = { workspace = true, features = ["test-utils"] }
rollup-node-sequencer.workspace = true
rollup-node-watcher.workspace = true
scroll-db = { workspace = true, features = ["test-utils"] }
scroll-engine.workspace = true

# misc
futures.workspace = true
tempfile = "3.20.0"
alloy-signer-local.workspace = true
