[package]
name = "rollup-node-signer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-signer.workspace = true

# scroll
reth-scroll-primitives.workspace = true

# misc
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-signer-local.workspace = true

[features]
default = ["std"]
std = [
    "futures/std",
    "reth-scroll-primitives/std",
]
