[package]
name = "rollup-node-watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-consensus.workspace = true
alloy-eips = { workspace = true, optional = true }
alloy-json-rpc.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-sol-types = "0.8.20"
alloy-transport.workspace = true

# rollup
rollup-node-primitives.workspace = true

# scroll
scroll-alloy-consensus.workspace = true

# misc
async-trait.workspace = true
derive_more = { workspace = true, features = ["from"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
alloy-consensus = { workspace = true, features = ["arbitrary", "k256"] }
alloy-eips.workspace = true
alloy-rpc-types-eth = { workspace = true, features = ["arbitrary"] }
arbitrary.workspace = true
eyre.workspace = true
rand = "0.9"

[features]
test-utils = ["alloy-eips"]
