[package]
name = "scroll-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-eips.workspace = true
alloy-primitives.workspace = true

# scroll-alloy
scroll-alloy-consensus.workspace = true

# scroll
scroll-migration = { workspace = true, optional = true }
rollup-node-primitives.workspace = true

# misc
async-trait.workspace = true
auto_impl.workspace = true
futures.workspace = true
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
tracing.workspace = true

[dev-dependencies]
# scroll
scroll-migration.workspace = true
rollup-node-primitives = { workspace = true, features = ["arbitrary"] }

# misc
arbitrary.workspace = true
rand.workspace = true

[features]
test-utils = ["dep:scroll-migration"]
