[package]
name = "scroll-migration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
csv = "1.3.1"
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
    # "sqlx-postgres",         # `DATABASE_DRIVER` feature
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
]
